--- a/app/src/main/res/layout/activity_recipe_steps_list.xml
+++ b/app/src/main/res/layout/activity_recipe_steps_list.xml
@@ -7,15 +7,9 @@
     android:orientation="vertical"
     tools:context=".RecipeStepsListActivity">
 
-    <Button
-        android:id="@+id/ingreadientsButton"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="@string/INGREDIENTS_BUTTON_TITLE"
-        android:layout_margin="10dp" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/stepsRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+<FrameLayout
+    android:id="@+id/containerr"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"></FrameLayout>
 
 </LinearLayout>
