--- a/app/src/main/res/layout/activity_tablet.xml
+++ b/app/src/main/res/layout/activity_tablet.xml
@@ -14,7 +14,7 @@
     <FrameLayout
         android:id="@+id/tabletStepContainer"
         android:layout_width="match_parent"
-        android:layout_weight="1"
+        android:layout_weight=".6"
         android:layout_height="match_parent"></FrameLayout>
 
 </LinearLayout>
