--- a/app/src/main/res/layout/stepcard.xml
+++ b/app/src/main/res/layout/stepcard.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/StepShortDescribtionTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:text="TextView"
         android:textSize="24sp"
         android:gravity="center"
