--- a/app/src/main/res/layout/step_fragment.xml
+++ b/app/src/main/res/layout/step_fragment.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_weight="1">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/simpleExoPlayer"
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="match_parent"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
+    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/cheesecake" />
+
+</LinearLayout>
     <TextView
         android:layout_margin="30dp"
         android:id="@+id/stepdescriptionTextView"
